--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "build": "^0.1.4",
     "cache-manager": "^5.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
